# heron-benchmark

./: .env.example  CLAUDE.md  README.md  canary.py  git-workflow-guide.md  instrumentalization_ablation_spec.md  old_experiment_spec.md  pyproject.toml  run_single_eval.py  sample_questions.py  samples.json  sync_questions_to_hf.py
.claude/commands/: research-prime.md
analysis/: extract_eval_csvs.py  generate_instrumentalization_ablation_report.py  generate_instrumentalization_ablation_viewer.py  render_paired_judgments.py
dataset/: heron_questions.csv  heron_questions_backup_20260722.csv  scenario_generation.py  scenario_quality_rules.md  scenario_taxonomy.md  smoke_test.py
experiment_results/: instrumentalization_ablation_results.md  instrumentalization_ablation_viewer.html
qualitative_analyses/: eval_analysis_template.md  paired_judge_experiment.md  qa_7-22-26_AL.ipynb  qa_template.ipynb
src/heron/: eval.py  heron_eval.py  heron_scorer.py  heron_solver.py  paired_eval.py  scorer.py
