[project]
name = "heron-benchmark"
version = "0.1.0"
description = "HERON — Hidden-stakes Ethical Reasoning On Nonhumans: benchmark measuring moral consideration for animals in scenarios where welfare stakes are implicit"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Allen Lu", email = "allen@sentientfutures.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "inspect-ai>=0.3.212",
    "datasets>=4.4.1",
    "python-dotenv>=1.0.0",
    "openai>=2.8.1",
    "anthropic>=0.97.0",
    "instructor>=1.7.0",
    "pandas>=2.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "ruff>=0.12.0",
    "pytest>=7.0",
]
